@startuml AppointmentFinder

Entity Event{
    *int eventID
    bool Open
    eventName
    F_optionID = winOption with most votes
    description
    dateOfClosing
}

Entity Comments{
    *commentID
    text
    F_eventID
    F_userID
}

Entity Users{   
    *userID
    name
}

Entity Vote{
    F_optionID
    F_userID
}

Entity Options {
    *optionID
    day
    date
    time from
    time to
    F_eventID
    int voteCounter
}

Options }|--|| Event
Users ||--|{ Vote
Vote }|--|| Options
Event ||--o{ Comments
Users ||--o{ Comments

@enduml

'|o-- 0,1
'||-- 1
'}o-- 0,n
'}|-- 1,n

/'update Event
  set winOption = 
    select optionID from options
    join event using(eventID)
    where votCounter = (select max(voteCounter) from options where eventID = number)
    and eventID = number
;'/

/'select comment from Vote
  join Users using(userID)
  join Options using(optionID)
  where userID = and optionID = ;
'/